# borrowd

./: .env.example  .env.platform  .gitattributes  .gitignore  .platform.app.yaml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  borrowd.dbml  db.sqlite3.bak.20250604  index.html  manage.py  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  vite.config.mjs
.claude/: settings.json
.platform/: routes.yaml  services.yaml
122/: index.html
123/: index.html
124/: index.html
125/: index.html
126/: index.html
127/: index.html
128/: index.html
129/: index.html
130/: index.html
131/: index.html
132/: index.html
133/: index.html
134/: index.html
135/: index.html
136/: index.html
137/: index.html
138/: index.html
139/: index.html
140/: index.html
141/: index.html
192/: index.html
193/: index.html
194/: index.html
195/: index.html
196/: index.html
197/: index.html
198/: index.html
199/: index.html
200/: index.html
201/: index.html
202/: index.html
203/: index.html
204/: index.html
205/: index.html
206/: index.html
207/: index.html
208/: index.html
209/: index.html
210/: index.html
211/: index.html
39/: index.html
40/: index.html
41/: index.html
46/: index.html
47/: index.html
48/: index.html
49/: index.html
73/: index.html
assets/: manifest.json
borrowd/: adapters.py  asgi.py  context_processors.py  exceptions.py  models.py  urls.py  util.py  views.py  wsgi.py
borrowd_beta/: README.MD  admin.py  apps.py  (+7 more)
(+2313 files in other folders)
