[project]
name = "borrowd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "django-allauth>=65.7.0",
    "django-browser-reload>=1.18.0",
    "django-cleanup>=9.0.0",
    "django-cotton>=2.0.3",
    "django-environ>=0.12.0",
    "django-filter>=25.1",
    "django-guardian>=3.0.0",
    "pillow>=11.1.0",
    "psycopg[binary]>=3.1",
    "gunicorn>=23.0.0",
    "django-storages[s3]>=1.14.6",
]
